# insighttrail

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
insighttrail/: __init__.py  _core.py  fastapi_adapter.py  fastapi_middleware.py  logger.py  metrics.py  middleware.py  traces.py
tests/: test_fastapi_insighttrail.py  test_insighttrail.py
